2011-08-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (ssemodesuffix): Remove V8SI mode.
	* config/i386/sse.md (castmode): New mode attribute.
	(avx_<castmode><avxsizesuffix>_<castmode>): Rename from
	avx_<ssemodesuffix><avxsizesuffix>_<ssemodesuffix>.

2011-08-05  Jan Hubicka  <jh@suse.cz>

	PR middle-end/49494
	* ipa-inline-analysis.c (remap_predicate): Add bounds check.

2011-08-05  Jan Hubicka  <jh@suse.cz>

	PR middle-end/49500
	* tree-emultls.c (new_emutls_decl):Add alias_of parameter;
	handle aliases.
	(create_emultls_var):New function.
	(ipa_lower_emutls): Handle aliases correctly.

2011-08-05  Jan Hubicka  <jh@suse.cz>

	PR middle-end/49735
	* ipa-inline.c (recursive_inlining): Look through aliases.

2011-08-05  Jason Merrill  <jason@redhat.com>

	* config/i386/i386.c (setup_incoming_varargs_ms_64): Move
	declarations to beginning of function.

2011-08-05  Bernd Schmidt  <bernds@codesourcery.com>

	PR rtl-optimization/49900
	* sched-ebb.c (add_deps_for_risky_insns): Also add dependencies to
	ensure basic blocks stay in the same order.

2011-08-05  Aldy Hernandez  <aldyh@redhat.com>

	* config/s390/s390.c (s390_expand_cs_hqi): Add new arguments to
	store_bit_field.
	(s390_expand_atomic): Same.

2011-08-05  Richard Henderson  <rth@redhat.com>

	PR rtl-opt/49977
	* dwarf2cfi.c (scan_insn_after): Split out of ...
	(scan_trace): ... here.  Correctly place notes wrt sequences.

2011-08-05  Kaz Kojima  <kkojima@gcc.gnu.org>
	    Richard Henderson  <rth@redhat.com>

	PR rtl-opt/49982
	* expr.c (fixup_args_size_notes): Look through no-op moves.

2011-08-05  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*push<mode>2): Use "o" constraint instead
	of "m" for operand 0.  Add type and mode attribute.
	(*pushxf_nointeger"): Use "<" constraint for operand 0.
	(*pushdf_rex64): New pattern, split out of *pushdf.  Use "m"
	constraint instead of "o" for opreand 1.
	(*pushdf): Disable for TARGET_64BIT.  Correct mode attribute.